# esp32s3-httpserver-example

./: CLAUDE.md  Cargo.toml  diagram.json  partitions.csv  sdkconfig.defaults  wokwi.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json
assets/: index.html
docs/: README.md
scripts/: flash.sh
src/: http.rs  main.rs  sensor.rs  wifi.rs
