[package]
name = "esp32-s3-learn"
version = "0.1.0"
authors = ["anlada <2682525840@qq.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "esp32-s3-learn"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["experimental"]

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = { version = "1.36", features = ["rt", "time", "macros"] }
rand = "0.9.1"
anyhow = "1.0"
heapless = "0.8"
[build-dependencies]
embuild = "0.33"